--- a/index.html
+++ b/index.html
@@ -10,29 +10,22 @@
   <header>
    <nav>
  <ul>
-  <li><a href="index.html" target="_blank" rel="noopener noreferrer">Home</a></li>
-  <li><a href="http://www.online-literature.com/dostoevsky/brothers_karamazov/" target="_blank" rel="noopener noreferrer">Brothers</a></li>
-  <li><a href="http://www.online-literature.com/dostoevsky/crimeandpunishment/" target="_blank" rel="noopener noreferrer">Crime</a></li>
-  <li><a href="http://www.online-literature.com/dostoevsky/house-of-the-dead/" target="_blank" rel="noopener noreferrer">House</a></li>
-  <li><a href="http://www.online-literature.com/tolstoy/war_and_peace/" target="_blank" rel="noopener noreferrer">War</a></li>
-  <li><a href="http://www.online-literature.com/tolstoy/anna_karenina/" target="_blank" rel="noopener noreferrer">Anna</a></li>
-  <li><a href="http://www.online-literature.com/tolstoy/death-of-ivan-ilych/" target="_blank" rel="noopener noreferrer">Death</a></li>
+  <li><a href="index.html" target="_blank">Home</a></li>
+  <li><a href="page1.html" target="_blank">Page 1</a></li>
+  <li><a href="page2.html" target="_blank">Page 2</a></li>
+  <li><a href="page3.html" target="_blank">Page 3</a></li>
+  <li><a href="page4.html" target="_blank">Page 4</a></li>
+  <li><a href="page5.html" target="_blank">Page 5</a></li>
+  <li><a href="page6.html" target="_blank">Page 6</a></li>
  </ul>
 </nav>
-</header>
 <main>
 <section>
 
 <article>
-<h2>Overview</h2>
-<p>This website is my draft presentation for this week. For next week's recorded presentation, I will build this website from scratch, record my desktop and explain what I'm doing step-by-step and why some steps are crucial. I'll have to figure out how to do all that within the four minute timeframe. All of this text on the Homepage will be deleted next week because it's interfering with my layout.</p>
-<p>To view the code for this site go here: <a href="https://github.com/sherriaragon/sherriaragon.github.io/"><b>https://github.com/sherriaragon/sherriaragon.github.io/</b></a> and click on any HTML or CSS page. I decided to use this format because the information is too long and complex for a PowerPoint or Google Slides presentation. Building the website and creating the content is much easier because you can see the code and how it renders on the actual website instead of seeing screenshots of the website and code in a PowerPoint presentation.</p>
-<p>Description: This site uses nested containers that are styled differently to give the appearance of layers. The Homepage for this site is a series of images and links to subsequent pages and other websites typical of any other Homepage. The Homepage is a three-column two-row layout. The images are linked to book summaries. The text for the book summaries is just filler text (because structure is the point, not content in this case). The nav bar is linked to the full stories published on Online-literature.com as the copyrights have expired. Only the first word of the book title after the article "The" is used so that users know which book is linked. I created the images for this website because book publishers recreate book covers and copyright them.</p>
-<p>My <a href="aragonproject1guide.pdf"><b>how-to guide</b></a> for building an HTML5 website with external CSS is linked. View the "Overview" on Page 1 in the guide to know some of the differences between HTML5 and HTML.</p>
-<p>HTML5 is the 5th version of the website authoring language, Hypertext Markup Language. HTML5 incorporates the functionality of all previous versions of HTML while integrating new technologies such as text-to-speech, speech-to-text, video, 3-D graphics and more. HTML5 defines structure, layout, and functionality using characters contained within opening and closing tags that have attributes telling browsers how to render the webpage. External CSS is included in this guide in order to separate content from formatting as recommended by the W3C Style Guide.</p> 
-<p>The World Wide Web Consortium (W3C) is the standards body who decides, publishes, and implements HTML and CSS rules worldwide. Its purpose is to expand website accessibility to more audiences by standardizing web development rules. Adhering to W3C rules increases search engine optimization (SEO) and website visits (theoretically).</p> 
-<p>HTML5 is open-source and freely accessible to people willing to learn it regardless of socioeconomic background, culture, language, geographical location, technological skill or physical impairment. It has the potential for expanding peoples’ information spheres and economic influence concerning learning and commercial or nonprofit ventures.</p>
-<p>Click a book cover below to veiw a faux summary of the item. Layout is what we're focused on for now. I'll probably change link destinations next week.</p>
+<h2>Heading</h2>
+ <p>Body text.</p>
+
 </article>
 <article>
  <h2>Dostoevsky & Tolstoy</h2>
