--- a/page2.html
+++ b/page2.html
@@ -9,13 +9,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <nav>
  <ul>
-  <li><a href="index.html" target="_blank" rel="noopener noreferrer">Home</a></li>
-  <li><a href="http://www.online-literature.com/dostoevsky/brothers_karamazov/" target="_blank" rel="noopener noreferrer">Brothers</a></li>
-  <li><a href="http://www.online-literature.com/dostoevsky/crimeandpunishment/" target="_blank" rel="noopener noreferrer">Crime</a></li>
-  <li><a href="http://www.online-literature.com/dostoevsky/house-of-the-dead/" target="_blank" rel="noopener noreferrer">House</a></li>
-  <li><a href="http://www.online-literature.com/tolstoy/war_and_peace/" target="_blank" rel="noopener noreferrer">War</a></li>
-  <li><a href="http://www.online-literature.com/tolstoy/anna_karenina/" target="_blank" rel="noopener noreferrer">Anna</a></li>
-  <li><a href="http://www.online-literature.com/tolstoy/death-of-ivan-ilych/" target="_blank" rel="noopener noreferrer">Death</a></li>
+  <li><a href="index.html" target="_blank">Home</a></li>
+  <li><a href="page1.html" target="_blank">Page 1</a></li>
+  <li><a href="page2.html" target="_blank">Page 2</a></li>
+  <li><a href="page3.html" target="_blank">Page 3</a></li>
+  <li><a href="page4.html" target="_blank">Page 4</a></li>
+  <li><a href="page5.html" target="_blank">Page 5</a></li>
+  <li><a href="page6.html" target="_blank">Page 6</a></li>
  </ul>
 </nav>
 </header>
@@ -25,7 +25,7 @@
 
 <article>
 <h2>Summary of <em>The Brothers Karamazov</em> by Fyodor Dostoevsky</h2>
-<img src="brotherskaramazovfd.jpg" alt="The Brothers Karamazov">
+<a href="http://www.online-literature.com/dostoevsky/brothers_karamazov/" target="_blank" rel="noopener noreferrer"><img src="brotherskaramazovfd.jpg" alt="The Brothers Karamazov"></a>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id ornare arcu odio ut sem nulla pharetra. Dapibus ultrices in iaculis nunc sed augue lacus viverra. Purus sit amet volutpat consequat mauris nunc congue. Non consectetur a erat nam at lectus urna duis. Commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Orci porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Amet mauris commodo quis imperdiet massa. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet proin. Eget aliquet nibh praesent tristique magna sit amet purus. Massa vitae tortor condimentum lacinia. Et netus et malesuada fames ac turpis egestas maecenas.</p>
 
