--- a/page2.html
+++ b/page2.html
@@ -10,12 +10,12 @@
 <nav>
  <ul>
   <li><a href="index.html" target="_blank">Home</a></li>
-  <li><a href="page1.html" target="_blank">Page 1</a></li>
-  <li><a href="page2.html" target="_blank">Page 2</a></li>
-  <li><a href="page3.html" target="_blank">Page 3</a></li>
-  <li><a href="page4.html" target="_blank">Page 4</a></li>
-  <li><a href="page5.html" target="_blank">Page 5</a></li>
-  <li><a href="page6.html" target="_blank">Page 6</a></li>
+  <li><a href="page2.html" target="_blank">Brothers</a></li>
+  <li><a href="page3.html" target="_blank">Crime</a></li>
+  <li><a href="page4.html" target="_blank">House</a></li>
+  <li><a href="page5.html" target="_blank">War</a></li>
+  <li><a href="page6.html" target="_blank">Anna</a></li>
+  <li><a href="page7.html" target="_blank">Death</a></li>
  </ul>
 </nav>
 </header>
