--- a/page2.html
+++ b/page2.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<head>
-<title>Sample Site</title>
-<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-<header>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<nav>
+ <html lang="en">
+  <head>
+   <meta charset="UTF-8">
+   <title>Sample Site</title>
+   <link rel="stylesheet" href="styles.css">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+ <body>
+  <header>
+   <nav>
  <ul>
-  <li><a href="index.html" target="_blank">Home</a></li> 
+  <li><a href="index.html" target="_blank">Home</a></li>
   <li><a href="page2.html" target="_blank">Brothers</a></li>
   <li><a href="page3.html" target="_blank">Crime</a></li>
   <li><a href="page4.html" target="_blank">House</a></li>
@@ -18,7 +19,7 @@
   <li><a href="page7.html" target="_blank">Death</a></li>
  </ul>
 </nav>
-</header>
+  </header>
 
 <main>
 <section>
