--- a/page7.html
+++ b/page7.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
-<head>
-<title>Sample Site</title>
-<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-<header>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<nav>
+ <html lang="en">
+  <head>
+   <meta charset="UTF-8">
+   <title>Sample Site</title>
+   <link rel="stylesheet" href="styles.css">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+ <body>
+  <header>
+   <nav>
  <ul>
-  <li><a href="index.html" target="_blank" rel="noopener noreferrer">Home</a></li>
-  <li><a href="http://www.online-literature.com/dostoevsky/brothers_karamazov/" target="_blank" rel="noopener noreferrer">Brothers</a></li>
-  <li><a href="http://www.online-literature.com/dostoevsky/crimeandpunishment/" target="_blank" rel="noopener noreferrer">Crime</a></li>
-  <li><a href="http://www.online-literature.com/dostoevsky/house-of-the-dead/" target="_blank" rel="noopener noreferrer">House</a></li>
-  <li><a href="http://www.online-literature.com/tolstoy/war_and_peace/" target="_blank" rel="noopener noreferrer">War</a></li>
-  <li><a href="http://www.online-literature.com/tolstoy/anna_karenina/" target="_blank" rel="noopener noreferrer">Anna</a></li>
-  <li><a href="http://www.online-literature.com/tolstoy/death-of-ivan-ilych/" target="_blank" rel="noopener noreferrer">Death</a></li>
+  <li><a href="index.html" target="_blank">Home</a></li>
+  <li><a href="page2.html" target="_blank">Brothers</a></li>
+  <li><a href="page3.html" target="_blank">Crime</a></li>
+  <li><a href="page4.html" target="_blank">House</a></li>
+  <li><a href="page5.html" target="_blank">War</a></li>
+  <li><a href="page6.html" target="_blank">Anna</a></li>
+  <li><a href="page7.html" target="_blank">Death</a></li>
  </ul>
 </nav>
-</header>
+  </header>
 
 <main>
 <section>
 
 <article>
 <h2>Summary of <em>The Death of Ivan Ilychlt</em> by Leo Tolstoy</h2>
-<img src="deathofivanilychlt.jpg" alt="The Death of Ivan Ilychlt">
+<a href="http://www.online-literature.com/tolstoy/death-of-ivan-ilych/" target="_blank" rel="noopener noreferrer"><img src="deathofivanilychlt.jpg" alt="The Death of Ivan Ilychlt"></a>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id ornare arcu odio ut sem nulla pharetra. Dapibus ultrices in iaculis nunc sed augue lacus viverra. Purus sit amet volutpat consequat mauris nunc congue. Non consectetur a erat nam at lectus urna duis. Commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Orci porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Amet mauris commodo quis imperdiet massa. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet proin. Eget aliquet nibh praesent tristique magna sit amet purus. Massa vitae tortor condimentum lacinia. Et netus et malesuada fames ac turpis egestas maecenas.</p>
 
