--- a/page4.html
+++ b/page4.html
@@ -2,7 +2,7 @@
  <html lang="en">
   <head>
    <meta charset="UTF-8">
-   <title>Sample Site</title>
+   <title>House</title>
    <link rel="stylesheet" href="styles.css">
    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
